pod-nginx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
spec:
  containers:
  - image: nginx:1.19
    name: nginx
    ports:
    - containerPort: 80
