ingress-nginx.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: 123-test.backend-test.skblab.ru
    http:
      paths:
      - backend:
          serviceName: service-nginx
          servicePort: 80
